--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
+    "dev": "NODE_ENV=dev next",
+    "build": "NODE_ENV=prod next build",
     "start": "next start"
   },
   "keywords": [],
