--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.13.0",
     "react-lazyload": "^2.6.5",
     "react-scroll-parallax": "^2.3.1",
+    "react-scroll-up": "^1.3.3",
     "react-tilt": "^0.1.4",
     "xml-js": "^1.6.11"
   }
