--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=dev next",
-    "build": "NODE_ENV=prod next build",
+    "build-storybook": "build-storybook",
+    "build": "build-storybook && NODE_ENV=prod next build",
     "start": "next start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006"
   },
   "keywords": [],
   "author": "",
