--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^9.2.2",
     "next-compose-plugins": "^2.2.0",
+    "next-fonts": "^1.0.3",
     "next-ga": "^2.3.4",
     "next-images": "^1.3.1",
     "node-sass": "^4.13.1",
