--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
     "cheerio": "^1.0.0-rc.3",
     "lodash.debounce": "^4.0.8",
+    "mongodb": "^3.5.6",
     "next": "^9.2.2",
     "next-compose-plugins": "^2.2.0",
+    "next-connect": "^0.6.5",
     "next-fonts": "^1.0.3",
     "next-ga": "^2.3.4",
     "next-images": "^1.3.1",
