--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-ga": "^2.3.4",
     "next-images": "^1.3.1",
     "node-sass": "^4.13.1",
+    "nodemailer": "^6.4.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-lazyload": "^2.6.5",
