--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "cheerio": "^1.0.0-rc.3",
+    "cookie": "^0.4.1",
+    "js-cookie": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "mongodb": "^3.5.6",
     "next": "^9.2.2",
