--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-lazyload": "^2.6.5",
+    "react-modal": "^3.11.2",
     "react-scroll-parallax": "^2.3.1",
     "react-scroll-up": "^1.3.3",
+    "react-select": "^3.1.0",
     "react-tilt": "^0.1.4",
     "xml-js": "^1.6.11"
   },
